2004-12-08  John Luke  <john.luke@gmail.com>

	* sources/README: update versions of the libs

2004-12-08  Mike Kestner  <mkestner@novell.com>

	* art/Art.metadata : mark some ints as bools. [Fixes #61047]

2004-12-08  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* sample/Makefile.am: Readded TestVfs.cs back and make it conditional.
	* sample/TestVfs.cs: New sample contributed by Tamara Roberson.
	[Fixes #70262]

2004-12-07  Mike Kestner  <mkestner@novell.com>

	* gtk/glue/style.c : add missing method and prototype. [Fixes #70216]

2004-12-07  Mike Kestner  <mkestner@novell.com>

	* */*.cs : s/glue-2.0/glue-2 so that dllimport works on win32.
	* */*.custom : s/glue-2.0/glue-2
	* */glue/makefile.win32 : s/glue-2.0/glue-2
	* */glue/Makefile.am : s/glue-2.0/glue-2

2004-12-06  John Luke  <john.luke@gmail.com>

	* gtk/Gtk.metadata: set with_mnemonic as the preferred ctor
	* doc/en/Gtk/Expander.xml: update

2004-12-06  John Luke  <john.luke@gmail.com>

	* gtk/Action.custom
	* gtk/ActionGroup.custom
	* gtk/UIManager.custom
	* gtk/Gtk.metadata
	* doc/en/Gtk/ActionGroup.xml
	* file doc/en/Gtk/Action.xml
	* doc/en/Gtk/UIManager.xml: replace List and SList with arrays
	and update the docs

2004-12-06  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs : add off_t as an IntPtr.

2004-12-06  Mike Kestner  <mkestner@novell.com>

	* generator/SignalHandler.cs : s/[]/Array in BaseName. [Fixes #69383]

2004-12-06  Mike Kestner  <mkestner@novell.com>

	* doc/en/*/*.xml : docs for new GValue members and size_t changes.
	* generator/SymbolTable.cs : add ssize_t and make size_t a UIntPtr
	instead of the current broken int mapping on 64 bit platforms.
	* gtkhtml/HTMLStream.custom : fix size_t related overload.
	[fixes #69574]

2004-12-03  Dan Winship  <danw@novell.com>

	* gdk/gdk-symbols.xml: alias GdkBitmap to GdkPixmap [Fixes #68824]

	* gdk/Gdk.metadata: Remove the earlier GdkBitmap hack now that
	it's aliased. Also move Gdk.Bitmap.CreateFromData to