@@ -277,7 +277,7 @@ namespace HtmlTest
       </Docs>
     </Member>
     <Member MemberName="Write">
-      <MemberSignature Language="C#" Value="public void Write (Gtk.HTMLStream handle, string buffer, UIntPtr size);" />
+      <MemberSignature Language="C#" Value="public void Write (Gtk.HTMLStream handle, string buffer, ulong size);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
@@ -285,13 +285,13 @@ namespace HtmlTest
       <Parameters>
         <Parameter Name="handle" Type="Gtk.HTMLStream" />
         <Parameter Name="buffer" Type="System.String" />
-        <Parameter Name="size" Type="System.UIntPtr" />
+        <Parameter Name="size" Type="System.UInt64" />
       </Parameters>
       <Docs>
         <summary>Writes <paramref name="size" /> bytes of content from <paramref name="buffer" /> to <paramref name="handle" />.</summary>
         <param name="handle">a <see cref="T:Gtk.HTMLStream" /></param>
         <param name="buffer">a <see cref="T:System.String" /></param>
-        <param name="size">a <see cref="T:System.UIntPtr" /></param>
+        <param name="size">a <see cref="T:System.UInt64" /></param>
         <remarks />
       </Docs>
     </Member>
