@@ -1,5 +1,5 @@
 <Type Name="HTMLSaveReceiverFn" FullName="Gtk.HTMLSaveReceiverFn">
-  <TypeSignature Language="C#" Maintainer="auto" Value="public sealed delegate bool HTMLSaveReceiverFn (IntPtr engine, string data, UIntPtr len);" />
+  <TypeSignature Language="C#" Maintainer="auto" Value="public sealed delegate bool HTMLSaveReceiverFn (IntPtr engine, string data);" />
   <AssemblyInfo>
     <AssemblyName>gtkhtml-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
