@@ -98,19 +98,19 @@
       </Docs>
     </Member>
     <Member MemberName="Write">
-      <MemberSignature Language="C#" Value="public void Write (byte [] buffer, UIntPtr size);" />
+      <MemberSignature Language="C#" Value="public void Write (byte [] buffer, ulong size);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
       </ReturnValue>
       <Parameters>
         <Parameter Name="buffer" Type="System.Byte[]" />
-        <Parameter Name="size" Type="System.UIntPtr" />
+        <Parameter Name="size" Type="System.UInt64" />
       </Parameters>
       <Docs>
         <summary>Write the HTML to <paramref name="buffer" />.</summary>
         <param name="buffer">a <see cref="T:System.Byte" /></param>
-        <param name="size">a <see cref="T:System.UIntPtr" /></param>
+        <param name="size">a <see cref="T:System.UInt64" /></param>
         <remarks />
       </Docs>
     </Member>
