@@ -1,5 +1,5 @@
 <Type Name="HTMLStreamWriteFunc" FullName="Gtk.HTMLStreamWriteFunc">
-  <TypeSignature Language="C#" Maintainer="auto" Value="public sealed delegate void HTMLStreamWriteFunc (Gtk.HTMLStream stream, string buffer, UIntPtr size);" />
+  <TypeSignature Language="C#" Maintainer="auto" Value="public sealed delegate void HTMLStreamWriteFunc (Gtk.HTMLStream stream, string buffer, ulong size);" />
   <AssemblyInfo>
     <AssemblyName>gtkhtml-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
