@@ -242,7 +242,7 @@
       </Docs>
     </Member>
     <Member MemberName="ParseCssbuffer">
-      <MemberSignature Language="C#" Value="public static void ParseCssbuffer (Rsvg.Handle ctx, string buff, UIntPtr buflen);" />
+      <MemberSignature Language="C#" Value="public static void ParseCssbuffer (Rsvg.Handle ctx, string buff);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
@@ -250,13 +250,11 @@
       <Parameters>
         <Parameter Name="ctx" Type="Rsvg.Handle" />
         <Parameter Name="buff" Type="System.String" />
-        <Parameter Name="buflen" Type="System.UIntPtr" />
       </Parameters>
       <Docs>
         <summary>To be added</summary>
         <param name="ctx">a <see cref="T:Rsvg.Handle" /></param>
         <param name="buff">a <see cref="T:System.String" /></param>
-        <param name="buflen">a <see cref="T:System.UIntPtr" /></param>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
