@@ -1,3 +1,7 @@
+2004-12-09  Mike Kestner  <mkestner@novell.com>
+
+	* en/Gtk/HTML*.xml : size_t marshaling updates.
+
 2004-12-08  John Luke  <john.luke@gmail.com>
 
 	* en/Gtk/IconLookupFlags.xml
