@@ -1,3 +1,11 @@
+2004-12-09  Mike Kestner  <mkestner@novell.com>
+
+	* generator/Makefile.am : new files.
+	* generator/MethodBody.cs : fix for length param code.
+	* generator/SizeTGen.cs : smarter size_t marshaling.
+	* generator/SSizeTGen.cs : smarter ssize_t marshaling.
+	* generator/SymbolTable.cs : use the new generatables.
+
 2004-12-08  John Luke  <john.luke@gmail.com>
 
 	* sources/README: update versions of the libs
